[package]
name = "memeperp"
version = "0.1.0"
description = "Leveraged perpetual trading for memecoin pairs on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memeperp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
pyth-sdk-solana = "0.8.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.3"
